{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 18,
  "lineage": "6380c763-d067-45eb-c8da-d699e721fb2c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ngw_pub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0112c7d458a920567",
            "domain": "vpc",
            "id": "eipalloc-0112c7d458a920567",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-13-231-36-45.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "13.231.36.45",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ngw-pub-a"
            },
            "tags_all": {
              "Name": "ngw-pub-a"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:177769041818:internet-gateway/igw-02f54d860772e564d",
            "id": "igw-02f54d860772e564d",
            "owner_id": "177769041818",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-0fb1c488508bc7e40"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw_pub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0112c7d458a920567",
            "connectivity_type": "public",
            "id": "nat-052b1ff3b884336a4",
            "network_interface_id": "eni-0bdb9e4ee2db9c3a1",
            "private_ip": "10.0.1.200",
            "public_ip": "13.231.36.45",
            "subnet_id": "subnet-0e02c0fbcbd6aa96b",
            "tags": {
              "Name": "ngw-pub-a"
            },
            "tags_all": {
              "Name": "ngw-pub-a"
            }
          },
          "dependencies": [
            "aws_eip.ngw_pub_a",
            "aws_subnet.public_a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:177769041818:route-table/rtb-02609d52bc1c0ba58",
            "id": "rtb-02609d52bc1c0ba58",
            "owner_id": "177769041818",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-052b1ff3b884336a4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rtb-priv-a"
            },
            "tags_all": {
              "Name": "rtb-priv-a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb1c488508bc7e40"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ngw_pub_a",
            "aws_nat_gateway.ngw_pub_a",
            "aws_subnet.public_a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:177769041818:route-table/rtb-0d32dc8badfa48b7c",
            "id": "rtb-0d32dc8badfa48b7c",
            "owner_id": "177769041818",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02f54d860772e564d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rtb-pub-a"
            },
            "tags_all": {
              "Name": "rtb-pub-a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb1c488508bc7e40"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-097eb47e2af21936f",
            "route_table_id": "rtb-02609d52bc1c0ba58",
            "subnet_id": "subnet-020f6a198d4d4eb6f"
          },
          "dependencies": [
            "aws_eip.ngw_pub_a",
            "aws_nat_gateway.ngw_pub_a",
            "aws_route_table.private_a",
            "aws_subnet.private_a",
            "aws_subnet.public_a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00dfabd34aa1cb275",
            "route_table_id": "rtb-0d32dc8badfa48b7c",
            "subnet_id": "subnet-0e02c0fbcbd6aa96b"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_a",
            "aws_subnet.public_a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "priv_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:177769041818:security-group/sg-028ded1e0e12d91d2",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-028ded1e0e12d91d2",
            "ingress": [],
            "name": "sg_priv_a",
            "name_prefix": "",
            "owner_id": "177769041818",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-priv-a"
            },
            "tags_all": {
              "Name": "sg-priv-a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb1c488508bc7e40"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:177769041818:security-group/sg-0183291bba671669f",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0183291bba671669f",
            "ingress": [],
            "name": "sg_pub_a",
            "name_prefix": "",
            "owner_id": "177769041818",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-pub-a"
            },
            "tags_all": {
              "Name": "sg-pub-a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb1c488508bc7e40"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_priv_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1746937351",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-028ded1e0e12d91d2",
            "security_group_rule_id": "sgr-02b18c3995671e30f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.priv_a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_pub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-338234814",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0183291bba671669f",
            "security_group_rule_id": "sgr-06ab15bb3644dc4ab",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.pub_a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress-pub-a-22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "101.111.161.148/32"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-1931734796",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0183291bba671669f",
            "security_group_rule_id": "sgr-0a6e42d561b13f4c2",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.pub_a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_priv_a_22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.1.0/24"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-718596525",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-028ded1e0e12d91d2",
            "security_group_rule_id": "sgr-0cf8af7cb2528355a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.priv_a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_pub_a_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "101.111.161.148/32"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1594280221",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0183291bba671669f",
            "security_group_rule_id": "sgr-067e093b5e52a8a01",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.pub_a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:177769041818:subnet/subnet-020f6a198d4d4eb6f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020f6a198d4d4eb6f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "177769041818",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv-a"
            },
            "tags_all": {
              "Name": "priv-a"
            },
            "vpc_id": "vpc-0fb1c488508bc7e40"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:177769041818:subnet/subnet-0e02c0fbcbd6aa96b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e02c0fbcbd6aa96b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "177769041818",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-a"
            },
            "tags_all": {
              "Name": "pub-a"
            },
            "vpc_id": "vpc-0fb1c488508bc7e40"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:177769041818:vpc/vpc-0fb1c488508bc7e40",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0319bc1f1b27dda35",
            "default_route_table_id": "rtb-0ca535e92c526a8b2",
            "default_security_group_id": "sg-07541bfcb6c52aa88",
            "dhcp_options_id": "dopt-0101da683223bdc08",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fb1c488508bc7e40",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ca535e92c526a8b2",
            "owner_id": "177769041818",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Name": "dev-vpc"
            }
          }
        }
      ]
    }
  ]
}